# PyTRMS

./: .gitignore  .gitmodules  AGENTS.md  Composition  DashcAMEv16.py  Makefile  README.md  build.py  captainhook.py  componist.py  decorators.py  icapi.cp38-win_amd64.pyd  io_utils.py  par_ID_list.txt  pyproject.toml  pytest.ini  setup.py  sharedAPI_Demo1.py  source2parameter.py  tox.ini
apitests/: conftest.py  test_create_meas.py  test_peaktable.py
build_ext/: README.md  extensions.sln  icapimodule.vcxproj  icapimodule.vcxproj.filters  np_get_include.props
data/: CommonTypes.lvlibp
doc/: conf.py  index.rst
doc/content/: api.rst  features.rst  release_history.rst  structure.rst
doc/uml/: pyconnect.dia
example_hooks/: examples.py
examples/: REQUIRES.txt  _calibrate.py  _measure_breath.py  breath_processing.py  breath_tracking.py  collect_data.py  experiment_control.py  measure_breath.py  new_calibrate.py  repeat_calibrate.py  tkinter_example.py
icapi/data/: hosttype.h
icapi/include/: IcAPI.h
include/: IcAPI.h  extcode.h  fundtypes.h  hosttype.h  lv_epilog.h  lv_prolog.h  platdefines.h
lib/: IcAPI_c_x64.lib
pytrms/: WebAPIProcess.py  __init__.py  _version.py  base.py  batch.py  factory.py  h5reader.py  helpers.py  inst_reader.py  instrument.py  ioniclient.py  measurement.py  modbus.py  peaktable.py  plotting.py  reader.py  tracebuffer.py
pytrms/_base/: __init__.py  daemon.py  ioniclient.py  mqttclient.py  mqttconn.py
pytrms/abstract/: traceable.py
pytrms/clients/: __init__.py  db_api.py  dirigent.py  dummy.py  h5source.py  halclient.py  ioniclient.py  modbus.py  mqtt.py  ssevent.py
pytrms/compose/: __init__.py  componist.py  composition.py  step.py
pytrms/composition/: composition.py
pytrms/connect/: __init__.py  _adapter.py  _base.py  instrument.py  ionitof.py  modbus.py  utils.py
pytrms/data/: IoniTofPrefs.ini  ParaIDs.csv
pytrms/plotting/: __init__.py
pytrms/readers/: __init__.py  ionitof_reader.py
src/: icapimodule.c
testing/: mockclient.py  response_TRACES_webAPI.txt
tests/: Sony_peak-table_260126_fits.ionipt  conftest.py  issue_3433.ionipt  test_IcAPI.py  test_db_api.py  test_docstrings.py  test_instrument.py  test_modbus.py  test_peaktable.py  test_reader.py  test_readers.py
(+8 files in other folders)
