[tool.poetry]
name = "pytrms"
version = "0.2.1"
description = "Python bundle for proton-transfer reaction mass-spectrometry (PTR-MS)."
authors = ["Moritz Koenemann <moritz.koenemann@ionicon.com>"]
license = "GPL-2.0"
include = [
    "par_ID_list.txt",
    "pytrms/data/IoniTofPrefs.ini",
    "*.pyd",
    "*.dll",
]

[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.6.0"
requests = "^2.27.1"
pandas = "^1.4.0"
pyModbusTCP = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.13.1"
matplotlib = "^3.5.2"
Sphinx = "^5.3.0"
Cython = "^0.29.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

