[tool.poetry]
name = "pytrms"
version = "0.9.1"
description = "Python bundle for proton-transfer reaction mass-spectrometry (PTR-MS)."
authors = ["Moritz Koenemann <moritz.koenemann@ionicon.com>"]
license = "GPL-2.0"
include = [
    "pytrms/data/ParaIDs.csv",
    "pytrms/data/IoniTofPrefs.ini",
]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.12.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
pandas = "^2.2.3"
pyModbusTCP = ">=0.1.9"
paho-mqtt = "~1.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^8.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

