[tool.poetry]
name = "pytrms"
version = "0.9.9"
description = "Python bundle for proton-transfer reaction mass-spectrometry (PTR-MS)."
authors = ["Moritz Koenemann <moritz.koenemann@ionicon.com>"]
license = "GPL-2.0"
include = [
    "pytrms/data/ParaIDs.csv",
    "pytrms/data/IoniTofPrefs.ini",
]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.12.1"
matplotlib = "^3.9.2"
requests = "^2.32.3"
pandas = "^2.2.3"

# we have legacy support for Anaconda-packages!
pyModbusTCP = ">=0.1.9"
paho-mqtt = ">=1.6.1,<3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
testcontainers = "^4.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

